<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tmp_start"
        android:orderInCategory="101"
        android:title="@string/action_start"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tmp_stop"
        android:orderInCategory="102"
        android:title="@string/action_stop"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="103"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>