<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main_home">

    <fragment
        android:id="@+id/nav_main_home"
        android:name="cc.ioctl.nfcdevicehost.activity.ui.home.HomeFragment"
        android:label="@string/menu_fragment_home"
        tools:layout="@layout/fragment_main_home" />

    <fragment
        android:id="@+id/nav_main_dump"
        android:name="cc.ioctl.nfcdevicehost.activity.ui.dump.NciDumpFragment"
        android:label="@string/menu_fragment_dump"
        tools:layout="@layout/fragment_main_dump" />

    <fragment
        android:id="@+id/nav_main_cards"
        android:name="cc.ioctl.nfcdevicehost.activity.ui.cards.CardListFragment"
        android:label="@string/menu_fragment_cards"
        tools:layout="@layout/fragment_main_card_list" />
</navigation>
