<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/title_warning"
                android:textColor="?android:attr/colorAccent"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_warn_app_risk"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/dialog_warnAppRisk_informed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_accept_risk"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@android:id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/btn_continue"
            android:focusable="true"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingTop="20dp"
            android:paddingRight="24dp"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginEnd="20dp"
                android:duplicateParentState="true"
                android:src="@drawable/ic_continue_24"
                app:tint="@color/stateful_accent"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:duplicateParentState="true"
                android:gravity="start|center_vertical"
                android:text="@string/btn_continue"
                android:textAllCaps="true"
                android:textColor="@color/stateful_accent"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@android:id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@android:string/cancel"
            android:focusable="true"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingTop="20dp"
            android:paddingRight="24dp"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginEnd="20dp"
                android:duplicateParentState="true"
                android:src="@drawable/ic_cross_24"
                app:tint="@color/stateful_accent"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:duplicateParentState="true"
                android:gravity="start|center_vertical"
                android:text="@android:string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/stateful_accent"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
