<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/home_mainStatusLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_yellow_solid"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="0dp"
            android:paddingTop="18dp"
            android:paddingRight="0dp"
            android:paddingBottom="18dp">

            <ImageView
                android:id="@+id/home_mainStatusIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_warning_white"
                app:tint="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_mainStatusTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:text="N/A"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/home_mainStatusDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:text="Internal error"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_detailInfoLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_trans_border_ripple"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:paddingLeft="0dp"
            android:paddingTop="18dp"
            android:paddingRight="0dp"
            android:paddingBottom="18dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_info"
                app:tint="@color/themeColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:text="@string/status"
                    android:textColor="@color/firstTextColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/home_detailInfoDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:text="N/A"
                    android:textColor="@color/secondTextColor"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/home_detailInfoDetailMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="N/A2"
                    android:textColor="@color/thirdTextColor"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_trans_border_ripple"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="0dp"
                android:paddingTop="18dp"
                android:paddingRight="0dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_settings"
                    app:tint="@color/themeColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="0dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:text="@string/operations"
                        android:textColor="@color/firstTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/home_operationsHints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:text="N/A1"
                        android:textColor="@color/thirdTextColor"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/home_operationsHintDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:text="N/A2"
                        android:textColor="@color/thirdTextColor"
                        android:textSize="12sp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:id="@+id/home_linearLayoutOperationA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ripple_round_rect"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="16dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_start_24"
                        app:tint="@color/themeColor" />

                    <TextView
                        android:id="@+id/home_textViewOperationA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/action_start_daemon"
                        android:textColor="@color/themeColor"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/home_linearLayoutOperationB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ripple_round_rect"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="16dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_outline_commit_24"
                        app:tint="@color/themeColor" />

                    <TextView
                        android:id="@+id/home_textViewOperationB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/attach_to_hal_service"
                        android:textColor="@color/themeColor"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/home_linearLayoutOperationC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ripple_round_rect"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="16dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_refresh_24"
                        app:tint="@color/themeColor" />

                    <TextView
                        android:id="@+id/home_textViewOperationC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/action_restart_hal_service"
                        android:textColor="@color/themeColor"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_layoutGithubRepo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_trans_border_null_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="0dp"
            android:paddingTop="18dp"
            android:paddingRight="0dp"
            android:paddingBottom="18dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_github"
                app:tint="@color/secondTextColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:text="@string/github"
                    android:textColor="@color/firstTextColor"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_layoutHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_trans_border_null_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="0dp"
            android:paddingTop="18dp"
            android:paddingRight="0dp"
            android:paddingBottom="18dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_help"
                app:tint="@color/secondTextColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:text="@string/usage_help"
                    android:textColor="@color/firstTextColor"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
